--- a/tamplate/produtos.html
+++ b/tamplate/produtos.html
@@ -96,7 +96,7 @@
                     }
                 };
     
-                xhr.send(); // Envia a requisição
+                xhr.send(); // Envia a requisiçãodsuhgfysgd
             });
         });
     });
