--- a/tamplate/produtos.html
+++ b/tamplate/produtos.html
@@ -51,7 +51,7 @@
                                 
                                     <a id="add-product" href="addcarrinho/{{listagem_de_produtos.id}}" class="btn btn-success ajax-link">Adicionar</a>
                             
-                                <small class="text-success limitadorDeLinha">{{listagem_de_produtos.estoque}} {{listagem_de_produtos.unidade_de_medida}} em estoque </small>
+                                <!-- <small class="text-success limitadorDeLinha">{{listagem_de_produtos.estoque}} {{listagem_de_produtos.unidade_de_medida}} em estoque </small> -->
                             {% else %}
                                 <div>
                                     <button class="btn btn-success" disabled>
@@ -101,4 +101,4 @@
         });
     });
 </script>    
-{% endblock conteudo %}
+{% endblock conteudo %}
